configure_file(
   ${CMAKE_CURRENT_SOURCE_DIR}/cmakeconfig.h.in
   ${CMAKE_CURRENT_SOURCE_DIR}/config.h
)
add_definitions(-DHAVE_CONFIG_H)

add_executable(${PROJECT_NAME} ${TET_CC_FILES})
target_link_libraries(${PROJECT_NAME}
   ${EINA_LIBRARIES}
   ${ECORE_LIBRARIES}
   ${ECORE_X_LIBRARIES}
   ${ECORE_EVAS_LIBRARIES}
   ${ECORE_FILE_LIBRARIES}
   ${EVAS_LIBRARIES}
   ${EET_LIBRARIES}
   ${EIO_LIBRARIES}
   ${EDJE_LIBRARIES}
   ${EFREET_LIBRARIES}
   ${ELEMENTARY_LIBRARIES}
)

INCLUDE(FindPkgConfig)
PKG_CHECK_MODULES (EDJE REQUIRED edje>=1.7.7)
PKG_CHECK_MODULES (ECORE REQUIRED ecore>=1.7.7)
PKG_CHECK_MODULES (ECORE_EVAS REQUIRED ecore-evas>=1.7.7)
PKG_CHECK_MODULES (EFLDEPS REQUIRED
  eina>=1.7.7
  evas>=1.7.7
  ecore>=1.7.7
  ecore-file>=1.7.7
  ecore-evas>=1.7.7
  edje>=1.7.7)
PKG_CHECK_MODULES (EINA REQUIRED eina>=1.7.7)
PKG_CHECK_MODULES (ECORE_X ecore-x>=1.7.7)
PKG_CHECK_MODULES (EVAS REQUIRED evas>=1.7.7)
