test_deps = [ eflete_deps, ewe_lib, ete_lib, check ]

test_include_dirs =   [ 
    include_directories('.'),
    include_directories('..'), 
    include_directories(join_paths('..','..')),                      
    include_directories(join_paths('..','..','src/lib')),
    include_directories(join_paths('..','..','src/bin')),
    include_directories(join_paths('..','..','src/bin/alloc')),
    include_directories(join_paths('..','..','src/bin/common')), 
    include_directories(join_paths('..','..','src/bin/config')),
    include_directories(join_paths('..','..','src/bin/editor')),
    include_directories(join_paths('..','..','src/bin/external')),
    include_directories(join_paths('..','..','src/bin/logger')),
    include_directories(join_paths('..','..','src/bin/project_manager')),
    include_directories(join_paths('..','..','src/bin/resource_manager')),
    include_directories(join_paths('..','..','src/bin/ui')),
    include_directories(join_paths('..','..','src/bin/ui/live_view')),
    include_directories(join_paths('..','..','src/bin/ui/modal_window')),
    include_directories(join_paths('..','..','src/bin/ui/live_view/elementary')),
    include_directories(join_paths('..','..','src/bin/ui/property')),
    include_directories(join_paths('..','..','src/bin/ui/shortcuts')),
    include_directories(join_paths('..','..','src/bin/ui/sound_player')),
    include_directories(join_paths('..','..','src/bin/ui/workspace')),
    include_directories(join_paths('..','..','src/bin/ui/workspace')),
    include_directories(join_paths('..','..','tests')),
]

subdir('test_alloc')
subdir('test_change')
subdir('test_config')
subdir('test_cursor')
subdir('test_diff')
subdir('test_eflete')
subdir('test_ewe_ruler')
subdir('test_history')
subdir('test_logger')
# subdir('test_project_manager')